# BickRenderer

./: BickRenderer.srctrldb  BickRenderer.srctrlprj  CMakeLists.txt  README.md  format.clang-format  xmake.lua
Source/: CMakeLists.txt
Source/GLSL_Shaders/Blinn-PhongShader/: StdBlinnPhongFrag.glsl  StdBlinnPhongVertex.glsl
Source/GLSL_Shaders/Fur/: FuryFrag.glsl  FuryGeometry.glsl  FuryVertex.glsl
Source/GLSL_Shaders/HomeWork/: MapEditorFrag.glsl  MapEditorVertex.glsl
Source/GLSL_Shaders/Jade/: JadeFrag.glsl
Source/GLSL_Shaders/PBS/: PBS_FragShader.glsl
Source/GLSL_Shaders/ScreenShader/: frag.glsl
Source/GLSL_Shaders/ShaderClass/: FragmentShader.glsl  VertexShader.glsl
Source/GLSL_Shaders/SkyBox/: cubemapfrag.glsl  cubemapvert.glsl
Source/GLSL_Shaders/Standard/: Standard_FS_RM.glsl  Standard_GS_RM.glsl  Standard_VS_RM.glsl
Source/GLSL_Shaders/ToonShader/: ToonFrag.glsl
Source/Include/: Bick.hpp
Source/Include/AssetLoader/: glTFImporter.hpp
Source/Include/Camera/: Camera.hpp
Source/Include/Common/: AssetPath.hpp  Singleton.hpp  Time.hpp
Source/Include/Input/: InputSystem.hpp
Source/Include/Light/: DirectionalLight.hpp  Light.hpp  PointLight.hpp
Source/Include/Material/: MatFactory.hpp  Mat_StandardPBM_MetallicWorkFlow.hpp  Material.hpp
Source/Include/Mesh/: Mesh.hpp  Model.hpp
Source/Include/Object/: Object.hpp
Source/Include/Renderer/: RenderPass.hpp  RenderPass_SkyBox.hpp  RenderPipeline.hpp  RenderResource.hpp  RenderResource_PostProcess.hpp  RenderResource_SkyBox.hpp  Renderer.hpp
Source/Src/: main.cpp
Source/Src/glad/: glad.c
(+342 files in other folders)
